--- a/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
@@ -34,3 +34,7 @@ msgstr "Vous êtes connecté en tant que %(username)s."
 msgid "not_logged_in"
 msgstr "Vous n'êtes pas connecté."
 
+#: templates/8-index.html:14
+msgid "current_time_is"
+msgstr "Nous sommes le %(current_time)s."
+
